{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 7,
  "lineage": "aafaef98-d220-f427-2da8-63a1d077f8dc",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-07e47e9d90d2076da",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01fc4efce1eddc585",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e47e9d90d2076da",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ef53345cf18315f0",
            "owner_id": "135928476890",
            "region": "eu-west-1",
            "tags": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f27749973e2399b6",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-08191126527e75dbd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08191126527e75dbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tech517-ozair-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0de1086c13235da70"
              }
            ],
            "primary_network_interface_id": "eni-0de1086c13235da70",
            "private_dns": "ip-172-31-54-205.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.54.205",
            "public_dns": "ec2-3-254-137-123.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.254.137.123",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c68b756199e14ead",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "techxxx-app-node-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013b0b0deea20b0e5",
            "tags": {
              "Env": "Training",
              "Name": "tech517-ozair-ubuntu-2204-ansible-target-node-app",
              "Role": "Ansible-Target-Node"
            },
            "tags_all": {
              "Env": "Training",
              "Name": "tech517-ozair-ubuntu-2204-ansible-target-node-app",
              "Role": "Ansible-Target-Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e89df5659810789a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "i-08191126527e75dbd",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.app_node_sg",
            "data.aws_ami.ubuntu_2204",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0e89df5659810789a",
            "description": "Allow SSH, HTTP, and Node.js",
            "egress": [],
            "id": "sg-0e89df5659810789a",
            "ingress": [],
            "name": "techxxx-app-node-sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techxxx-app-node-sg"
            },
            "tags_all": {
              "Name": "techxxx-app-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e47e9d90d2076da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "sg-0e89df5659810789a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group-rule/sgr-02789c9daeeb174f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02789c9daeeb174f2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e89df5659810789a",
            "security_group_rule_id": "sgr-02789c9daeeb174f2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "sgr-02789c9daeeb174f2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.app_node_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group-rule/sgr-05a6eb6c7c93739cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05a6eb6c7c93739cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e89df5659810789a",
            "security_group_rule_id": "sgr-05a6eb6c7c93739cc",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "sgr-05a6eb6c7c93739cc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.app_node_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group-rule/sgr-0d53295ccb9966bec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0d53295ccb9966bec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e89df5659810789a",
            "security_group_rule_id": "sgr-0d53295ccb9966bec",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "sgr-0d53295ccb9966bec",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.app_node_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group-rule/sgr-04f7d3ec3df7e3006",
            "cidr_ipv4": "145.40.129.215/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04f7d3ec3df7e3006",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e89df5659810789a",
            "security_group_rule_id": "sgr-04f7d3ec3df7e3006",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "135928476890",
            "id": "sgr-04f7d3ec3df7e3006",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.app_node_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}